// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/input/demo/addon.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="wmstool-input-group-wrapper"
    >
      <span
        class="wmstool-input-wrapper wmstool-input-group"
      >
        <span
          class="wmstool-input-group-addon"
        >
          Http://
        </span>
        <input
          class="wmstool-input"
          type="text"
          value="mysite"
        />
        <span
          class="wmstool-input-group-addon"
        >
          .com
        </span>
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="wmstool-input-group-wrapper"
    >
      <span
        class="wmstool-input-wrapper wmstool-input-group"
      >
        <span
          class="wmstool-input-group-addon"
        >
          <div
            class="wmstool-select wmstool-select-enabled"
            style="width:90px"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="wmstool-select-selection
            wmstool-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="wmstool-select-selection__rendered"
              >
                <div
                  class="wmstool-select-selection-selected-value"
                  style="display:block;opacity:1"
                  title="Http://"
                >
                  Http://
                </div>
              </div>
              <span
                class="wmstool-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                <b />
              </span>
            </div>
          </div>
        </span>
        <input
          class="wmstool-input"
          type="text"
          value="mysite"
        />
        <span
          class="wmstool-input-group-addon"
        >
          <div
            class="wmstool-select wmstool-select-enabled"
            style="width:80px"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="wmstool-select-selection
            wmstool-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="wmstool-select-selection__rendered"
              >
                <div
                  class="wmstool-select-selection-selected-value"
                  style="display:block;opacity:1"
                  title=".com"
                >
                  .com
                </div>
              </div>
              <span
                class="wmstool-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                <b />
              </span>
            </div>
          </div>
        </span>
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="wmstool-input-group-wrapper"
    >
      <span
        class="wmstool-input-wrapper wmstool-input-group"
      >
        <input
          class="wmstool-input"
          type="text"
          value="mysite"
        />
        <span
          class="wmstool-input-group-addon"
        >
          <i
            class="anticon anticon-setting"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/input/demo/allowClear.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="wmstool-input-affix-wrapper"
    >
      <input
        class="wmstool-input"
        type="text"
        value="非受控组件"
      />
      <span
        class="wmstool-input-suffix"
      >
        <i
          class="anticon anticon-close-circle"
        />
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="wmstool-input-affix-wrapper"
    >
      <input
        class="wmstool-input"
        type="text"
        value=""
      />
    </span>
  </div>
  <div
    style="margin-bottom:16px"
  >
    <span
      class="wmstool-input-affix-wrapper"
    >
      <input
        class="wmstool-input"
        type="text"
        value=""
      />
      <span
        class="wmstool-input-suffix"
      >
        <i
          class="anticon anticon-user"
          style="color:rgba(0,0,0,.25)"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/input/demo/autosize-textarea.md correctly 1`] = `
<div>
  <textarea
    class="wmstool-input"
    placeholder="Autosize height based on content lines"
  />
  <div
    style="margin:24px 0"
  />
  <textarea
    class="wmstool-input"
    placeholder="Autosize height with minimum and maximum number of lines"
  />
</div>
`;

exports[`renders ./components/input/demo/basic.md correctly 1`] = `
<input
  class="wmstool-input"
  placeholder="Basic usage"
  type="text"
/>
`;

exports[`renders ./components/input/demo/group.md correctly 1`] = `
<div>
  <span
    class="wmstool-input-group wmstool-input-group-lg"
  >
    <div
      class="wmstool-col-4"
    >
      <input
        class="wmstool-input"
        type="text"
        value="0571"
      />
    </div>
    <div
      class="wmstool-col-8"
    >
      <input
        class="wmstool-input"
        type="text"
        value="26888888"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-input-group wmstool-input-group-compact"
  >
    <input
      class="wmstool-input"
      style="width:20%"
      type="text"
      value="0571"
    />
    <input
      class="wmstool-input"
      style="width:30%"
      type="text"
      value="26888888"
    />
  </span>
  <br />
  <span
    class="wmstool-input-group wmstool-input-group-compact"
  >
    <div
      class="wmstool-select wmstool-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Zhejiang"
          >
            Zhejiang
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <input
      class="wmstool-input"
      style="width:50%"
      type="text"
      value="Xihu District, Hangzhou"
    />
  </span>
  <br />
  <span
    class="wmstool-input-group wmstool-input-group-compact"
  >
    <div
      class="wmstool-select wmstool-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option1"
          >
            Option1
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <input
      class="wmstool-input"
      style="width:50%"
      type="text"
      value="input content"
    />
    <div
      class="wmstool-input-number"
    >
      <div
        class="wmstool-input-number-handler-wrap"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="wmstool-input-number-handler wmstool-input-number-handler-up "
          role="button"
          unselectable="unselectable"
        >
          <span
            class="wmstool-input-number-handler-up-inner"
            unselectable="unselectable"
          />
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="wmstool-input-number-handler wmstool-input-number-handler-down "
          role="button"
          unselectable="unselectable"
        >
          <span
            class="wmstool-input-number-handler-down-inner"
            unselectable="unselectable"
          />
        </span>
      </div>
      <div
        aria-valuemin="-9007199254740991"
        class="wmstool-input-number-input-wrap"
        role="spinbutton"
      >
        <input
          autocomplete="off"
          class="wmstool-input-number-input"
          min="-9007199254740991"
          step="1"
          value=""
        />
      </div>
    </div>
  </span>
  <br />
  <span
    class="wmstool-input-group wmstool-input-group-compact"
  >
    <input
      class="wmstool-input"
      style="width:50%"
      type="text"
      value="input content"
    />
    <span
      class="wmstool-calendar-picker"
    >
      <div>
        <input
          class="wmstool-calendar-picker-input wmstool-input"
          placeholder="Select date"
          readonly=""
          value=""
        />
        <span
          class="wmstool-calendar-picker-icon"
        />
      </div>
    </span>
  </span>
  <br />
  <span
    class="wmstool-input-group wmstool-input-group-compact"
  >
    <div
      class="wmstool-select wmstool-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option1-1"
          >
            Option1-1
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <div
      class="wmstool-select wmstool-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Option2-2"
          >
            Option2-2
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
  </span>
  <br />
  <span
    class="wmstool-input-group wmstool-input-group-compact"
  >
    <div
      class="wmstool-select wmstool-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Between"
          >
            Between
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <input
      class="wmstool-input"
      placeholder="Minimum"
      style="width:100px;text-align:center"
      type="text"
    />
    <input
      class="wmstool-input wmstool-input-disabled"
      disabled=""
      placeholder="~"
      style="width:24px;border-left:0;pointer-events:none;background-color:#fff"
      type="text"
    />
    <input
      class="wmstool-input"
      placeholder="Maximum"
      style="width:100px;text-align:center;border-left:0"
      type="text"
    />
  </span>
  <br />
  <span
    class="wmstool-input-group wmstool-input-group-compact"
  >
    <div
      class="wmstool-select wmstool-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Sign Up"
          >
            Sign Up
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <div
      class="wmstool-select-show-search wmstool-select-auto-complete wmstool-select wmstool-select-combobox wmstool-select-enabled"
      style="width:200px"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection__placeholder"
            style="display:block;user-select:none;-webkit-user-select:none"
            unselectable="unselectable"
          >
            Email
          </div>
          <ul>
            <li
              class="wmstool-select-search wmstool-select-search--inline"
            >
              <div
                class="wmstool-select-search__field__wrap"
              >
                <input
                  class="wmstool-input wmstool-select-search__field"
                  type="text"
                  value=""
                />
                <span
                  class="wmstool-select-search__field__mirror"
                >
                   
                </span>
              </div>
            </li>
          </ul>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
  </span>
  <br />
  <span
    class="wmstool-input-group wmstool-input-group-compact"
  >
    <div
      class="wmstool-select wmstool-select-enabled"
      style="width:30%"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="Home"
          >
            Home
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
    <span
      class="wmstool-cascader-picker"
      style="width:70%"
      tabindex="0"
    >
      <span
        class="wmstool-cascader-picker-label"
      />
      <input
        autocomplete="off"
        class="wmstool-input wmstool-cascader-input "
        placeholder="Select Address"
        readonly=""
        type="text"
        value=""
      />
      <i
        class="anticon anticon-down wmstool-cascader-picker-arrow"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/input/demo/presuffix.md correctly 1`] = `
<span
  class="wmstool-input-affix-wrapper"
>
  <span
    class="wmstool-input-prefix"
  >
    <i
      class="anticon anticon-user"
      style="color:rgba(0,0,0,.25)"
    />
  </span>
  <input
    class="wmstool-input"
    placeholder="Enter your username"
    type="text"
    value=""
  />
</span>
`;

exports[`renders ./components/input/demo/search-input.md correctly 1`] = `
<div>
  <span
    class="wmstool-input-search wmstool-input-affix-wrapper"
    style="width:200px"
  >
    <input
      class="wmstool-input"
      placeholder="input search text"
      type="text"
    />
    <span
      class="wmstool-input-suffix"
    >
      <i
        class="anticon anticon-search wmstool-input-search-icon"
      />
    </span>
  </span>
  <br />
  <br />
  <span
    class="wmstool-input-search wmstool-input-search-enter-button wmstool-input-affix-wrapper"
  >
    <input
      class="wmstool-input"
      placeholder="input search text"
      type="text"
    />
    <span
      class="wmstool-input-suffix"
    >
      <button
        class="wmstool-btn wmstool-input-search-button wmstool-btn-primary"
        type="button"
      >
        <i
          class="anticon anticon-search"
        />
      </button>
    </span>
  </span>
  <br />
  <br />
  <span
    class="wmstool-input-search wmstool-input-search-enter-button wmstool-input-search-large wmstool-input-affix-wrapper wmstool-input-affix-wrapper-lg"
  >
    <input
      class="wmstool-input wmstool-input-lg"
      placeholder="input search text"
      type="text"
    />
    <span
      class="wmstool-input-suffix"
    >
      <button
        class="wmstool-btn wmstool-input-search-button wmstool-btn-primary wmstool-btn-lg"
        type="button"
      >
        <span>
          Search
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`renders ./components/input/demo/size.md correctly 1`] = `
<div
  class="example-input"
>
  <input
    class="wmstool-input wmstool-input-lg"
    placeholder="large size"
    type="text"
  />
  <input
    class="wmstool-input"
    placeholder="default size"
    type="text"
  />
  <input
    class="wmstool-input wmstool-input-sm"
    placeholder="small size"
    type="text"
  />
</div>
`;

exports[`renders ./components/input/demo/textarea.md correctly 1`] = `
<textarea
  class="wmstool-input"
  rows="4"
/>
`;

exports[`renders ./components/input/demo/tooltip.md correctly 1`] = `
<input
  class="wmstool-input"
  maxlength="25"
  placeholder="Input a number"
  style="width:120px"
  type="text"
  value=""
/>
`;
